Order TabManager functions.

BUG=620727

Review-Url: https://codereview.chromium.org/2228473003
Cr-Commit-Position: refs/heads/master@{#411170}

Former-commit-id: 0085d7f91428e5101c606fd4300cde03f7b660a4